--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,19 @@
+h2{
+    margin-bottom: 50px;
+}
+body{
+    display: flex;
+    justify-content: center;
+}
 #changelog-container {
     border: 2px solid black;
-    border-radius: 18px;
+    border-radius: 22px;
     text-align: center;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
+    width: 65%;
 }
 
 .changelog-row{
@@ -32,7 +40,8 @@
 }
 
 .changelog-date{
-    margin-top: 27px
+    margin-top: 27px;
+    color: grey
 }
 
 .changelog-content{
