--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,13 @@ body{
 .changelog-content{
     margin-top: 27px;
 }
+
+#button {
+    border-radius: 8px;
+    width: auto;
+    height: auto;
+    background-color: black;
+    color: white;
+    padding: 20px;
+    margin: 30px 0px;
+}
