--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,21 @@
-h2{
-    margin-bottom: 50px;
+* {
+    box-sizing: border-box;
 }
+
 body{
   font-family: 'Inter', sans-serif;
     display: flex;
     justify-content: center;
+    margin: 0;
 }
+
+h2 {
+
+  margin-bottom: 50px;
+  text-align: center;
+}
+
+/* The box the changelog is in */
 #changelog-container {
     border: 2px solid black;
     border-radius: 22px;
@@ -17,10 +27,15 @@ body{
     width: 65%;
 }
 
+/* The row of information including the line and dot */
 .changelog-row{
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     gap: 50px;
+    width: 60%;
+    align-items: center;
+    height: 100px;
+    box-sizing: border-box;
 }
 
 .line {
@@ -29,6 +44,9 @@ body{
     position: relative;
 }
 
+.line-item{
+    flex-grow: 1;
+}
 .dot {
     width: 15px;
     height: 15px;
@@ -40,11 +58,15 @@ body{
     transform: translate(-50%, -10%);
 }
 
+/* Text on the let */
 .changelog-date{
     margin-top: 27px;
-    color: grey
+    color: grey;
+    width: 150px;
+    flex-shrink: 0;
 }
 
+/*Text on the right */
 .changelog-content{
     margin-top: 27px;
 }
