--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,20 @@ h2{
     min-width: 200px;
     max-width: 400px;
 }
+
+.line {
+    border-right: 2px solid black;
+    height: 3rem;
+    position: relative;
+}
+
+.dot {
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    background-color: black;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+}
+
